# tsoa/routes.ts
@@ -13,10 +13,10 @@ const models: TsoaRoute.Models = {
         "dataType": "refObject",
         "properties": {
             "id": {"dataType":"double"},
-            "make": {"dataType":"string","required":true},
-            "model": {"dataType":"string","required":true},
-            "colour": {"dataType":"string","required":true},
-            "year": {"dataType":"double","required":true},
+            "make": {"dataType":"string"},
+            "model": {"dataType":"string"},
+            "colour": {"dataType":"string"},
+            "year": {"dataType":"double"},
         },
         "additionalProperties": false,
     },
@@ -103,6 +103,30 @@ export function RegisterRoutes(app: express.Router) {
 
 
               const promise = controller.delete.apply(controller, validatedArgs as any);
+              promiseHandler(controller, promise, response, undefined, next);
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        app.put('/car',
+
+            function CarController_update(request: any, response: any, next: any) {
+            const args = {
+                    id: {"in":"query","name":"id","required":true,"dataType":"double"},
+                    requestBody: {"in":"body","name":"requestBody","required":true,"ref":"Car"},
+            };
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = getValidatedArgs(args, request, response);
+
+                const controller = new CarController();
+
+
+              const promise = controller.update.apply(controller, validatedArgs as any);
               promiseHandler(controller, promise, response, undefined, next);
             } catch (err) {
                 return next(err);
