# tsoa/swagger.json
@@ -26,12 +26,6 @@
 						"format": "double"
 					}
 				},
-				"required": [
-					"make",
-					"model",
-					"colour",
-					"year"
-				],
 				"type": "object",
 				"additionalProperties": false
 			},
@@ -164,6 +158,41 @@
 						}
 					}
 				]
+			},
+			"put": {
+				"operationId": "Update",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/Car"
+							}
+						}
+					}
+				}
 			}
 		}
 	},
